# QR_code_generator

./: .gitignore  CMakeLists.txt  Hello  LICENSE  LICENSE.md  Makefile  QR.ppm  README.md  aux.c  config.h  extra.c  header.h  macros.h  main.c  project  step1.c  step2.c
src/: Makefile  QR.ppm  config.h  extra.c  file_format.c  header.h  macros.h  main.c  project  reed-solomon.c  rs.c  step1.c  step2.c  step3.c  step4.c  test.txt
src/dep/: stb_image_write.c
src/utils/: alphanumeric_mode_capacity.txt  data_codewords_capacity.txt  ec_codewords_capacity.txt  format_information_string.txt  numeric_mode_capacity.txt  version_format_info.txt
src/utils/groups/: blocks_no_G1.txt  blocks_no_G2.txt  codewords_no_in_G1_blocks.txt  codewords_no_in_G2_blocks.txt
src/utils/type/: byte_mode_capacity.txt
utils/: byte_mode_capacity.txt  kanji_mode_capacity.txt
